Fix Project Section Top Gap

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -178,6 +178,7 @@
     translate: 0 -13.15rem;
     color: white;
     position: relative;
+    margin-bottom: -12rem;
 }
 
 .projectCard {
